# ALM-rate-shock-2023

./: .env.example  .gitignore  DEPLOY.md  LICENSE  PROJECT_PROMPT.md  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
data/sample/: ffiec_long.parquet  fred_macro.parquet
scripts/: fetch_ffiec.py  generate_hero_charts.py  pull_ffiec.py  pull_fred.py
src/alm/: __init__.py  config.py
src/alm/data/: __init__.py  banks.py  ffiec.py  ffiec_schedules.py  fred.py
src/alm/models/: __init__.py  eve.py  liquidity.py  nii_sensitivity.py  repricing_gap.py
tests/: test_eve.py  test_ffiec.py  test_fred.py  test_liquidity.py  test_nii_sensitivity.py  test_repricing_gap.py
