[project]
name = "alm-rate-shock-2023"
version = "0.1.0"
description = "ALM / Balance Sheet Modeling: reconstructing the 2022–2023 US rate shock and the SVB postmortem"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Jared Limon" },
]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "pyarrow>=16.0",
    "click>=8.1",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.36",
    "plotly>=5.22",
    "matplotlib>=3.9",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
fetch = [
    # Automated FFIEC bulk download. One-time setup:
    #   uv pip install -e ".[fetch]"
    #   uv run playwright install chromium
    "playwright>=1.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter
